// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense correctly 1`] = `
<div>
  <p>
    Showing 
    1
     expenses totaling
     
    $1,095.00
  </p>
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <p>
    Showing 
    3
     expenses totaling
     
    $1,141.95
  </p>
</div>
`;
